--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -16,3 +16,92 @@
   margin-left: 2rem;
   cursor: pointer;
 }
+
+.navmenu {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 70vw;
+  justify-content: end;
+  margin-right: 2rem;
+}
+
+.navLinks {
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+}
+
+.navLinks:hover {
+  background-color: #6d76f7;
+  border-radius: 4px;
+  transition: all 0.2s ease-out;
+}
+
+.navLinksMobile {
+  display: none;
+}
+
+.menuIcon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .navbarItems {
+    position: relative;
+  }
+
+  .navmenu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 500px;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5 ease;
+  }
+
+  .navemenuactive {
+    background: #6668f4;
+    transform: translate(10%, 68%);
+    left: 0;
+    width: 100vw;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+    list-style: none;
+  }
+
+  .navLinks {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .navLinks:hover {
+    background-color: #7577fa;
+    border-radius: 0;
+  }
+
+  .navbarLogo {
+    position: absolute;
+    top: 1.3rem;
+    left: 0;
+    transform: translate(25%, 50%);
+  }
+
+  .menuIcon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+}
