--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -73,11 +73,7 @@
 
 .container {
   position: relative;
-  background: linear-gradient(
-    90deg,
-    rgb(110, 94, 254) 0%,
-    rgba(73, 63, 252, 1) 100%
-  );
+  background: rgb(110, 94, 254);
   height: 85vh;
 }
 
@@ -85,11 +81,7 @@
   position: absolute;
   height: 70px;
   width: 100%;
-  background: linear-gradient(
-    90deg,
-    rgb(110, 94, 254) 0%,
-    rgba(73, 63, 252, 1) 100%
-  );
+  background: rgb(110, 94, 254);
   bottom: 0;
 }
 
@@ -111,11 +103,8 @@
 .wave::after {
   width: 55%;
   height: 100%;
-  background-color: linear-gradient(
-    360deg,
-    rgb(110, 94, 254) 0%,
-    rgba(73, 63, 252, 1) 10%
-  );
+  background-color: rgb(110, 94, 254);
+
   left: -1.5%;
   top: 40%;
 }
