--- a/src/components/SignUpForm.module.css
+++ b/src/components/SignUpForm.module.css
@@ -1,3 +1,13 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
+}
+
 form {
   width: 100%;
 }
@@ -5,12 +15,17 @@ form {
 .loginBox {
   width: 50%;
   text-align: center;
-  position: relative;
+  position: fixed;
   left: 50%;
   transform: translate(-50%, 20%);
   padding: 20px;
   background-color: white;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
+  z-index: 100;
+}
+
+input {
+  width: 100%;
 }
 
 .signUpSubmit {
