--- a/src/components/Donate.module.css
+++ b/src/components/Donate.module.css
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: 3fr 1fr;
   height: 80vh;
-  margin-top: 35rem;
+  margin-top: 32.5rem;
+  margin-bottom: 10rem;
 }
 
 .form {
@@ -36,5 +37,5 @@ label {
 .donateicon {
   width: 25rem;
   margin-right: 6rem;
-  margin-top: 4rem;
+  margin-top: 7rem;
 }
