--- a/src/components/JobDetails.module.css
+++ b/src/components/JobDetails.module.css
@@ -8,17 +8,12 @@
   background: rgba(0, 0, 0, 0.75);
 }
 
-form {
-  width: 100%;
-}
-
-.careerBox {
+.jobBox {
   width: 50%;
   text-align: center;
   position: fixed;
   left: 50%;
   transform: translate(-50%, 20%);
-  border-radius: 2px;
   padding: 20px;
   background-color: white;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.4);
