--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -102,3 +102,21 @@
     cursor: pointer;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .navbarLogo {
+    width: 6rem;
+    margin-top: -3rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .navbarItems {
+    width: 132vw;
+  }
+
+  .menuIcon {
+    margin-top: 1.5rem;
+    margin-right: 1rem;
+  }
+}
