--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -87,7 +87,7 @@ a {
 
 @media screen and (max-width: 800px) {
   .footer {
-    height: 23.7rem;
+    height: 25rem;
     padding: 0.5rem;
   }
   .header {
@@ -102,5 +102,112 @@ a {
 
   .socialmedia h3 {
     margin-right: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer {
+    height: 218vh;
+  }
+
+  .header {
+    text-align: center;
+    margin: 1.5rem auto;
+  }
+
+  .sections {
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .intouch {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    border-right: none;
+    border-bottom: 1px solid #000;
+    justify-content: center;
+    align-items: center;
+  }
+  .career {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+    border-right: none;
+    border-bottom: 1px solid #000;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .account {
+    grid-column: 1/-1;
+    grid-row: 3/4;
+    border-right: none;
+    border-bottom: 1px solid #000;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .policies {
+    grid-column: 1/-1;
+    grid-row: 4/5;
+    border-right: none;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .socialmedia {
+    grid-column: 1/-1;
+    grid-row: 5/6;
+    justify-content: space-around;
+    margin-bottom: 0.5rem;
+  }
+
+  .footericons {
+    margin-right: 1.5rem;
+  }
+
+  h3 {
+    margin-bottom: 0.5rem;
+  }
+  .intouch p {
+    margin: 0.5rem auto;
+  }
+
+  .career div {
+    margin: 0.5rem auto;
+  }
+
+  .account div {
+    margin: 0.5rem auto;
+  }
+
+  .policies div {
+    margin: 0.5rem auto;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .footer {
+    width: 132vw;
+    height: 168vh;
+    font-size: 80%;
+  }
+
+  .sections {
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  .intouch p {
+    margin: 0.5rem auto;
+  }
+
+  .career div {
+    margin: 0.5rem auto;
+  }
+
+  .account div {
+    margin: 0.5rem auto;
+  }
+
+  .policies div {
+    margin: 0.5rem auto;
   }
 }
