--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -107,3 +107,37 @@
   left: -1.5%;
   top: 40%;
 }
+
+@media screen and (max-width: 800px) {
+  .headerText {
+    padding-top: 2rem;
+  }
+
+  .image {
+    width: 13rem;
+  }
+
+  .text3 {
+    font-size: 2.1rem;
+  }
+
+  .text6 {
+    font-size: 1rem;
+    margin-top: 0.3rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    justify-content: center;
+  }
+  .image {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    width: 132vw;
+  }
+}
